Added support and logic to retrieve data from MongoDB

--- a/Shopping.API/appsettings.json
+++ b/Shopping.API/appsettings.json
@@ -1,4 +1,9 @@
 ﻿{
+  "DatabaseSettings": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "ProductDb",
+    "CollectionName": "Products"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,4 +12,3 @@
   },
   "AllowedHosts": "*"
 }
-
