--- a/Shopping/Shopping.Client/appsettings.json
+++ b/Shopping/Shopping.Client/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "AppSettings": {
+    "ShoppingAPI": "http://localhost:5002"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,4 +10,3 @@
   },
   "AllowedHosts": "*"
 }
-
