--- a/Shopping/docker-compose.override.yml
+++ b/Shopping/docker-compose.override.yml
@@ -2,14 +2,30 @@ version: '3.4'
 
 services:
   shopping.client:
+    container_name: shoppingclient
     environment:
-      - ASPNETCORE_ENVIRONMENT=Development
+      - "ASPNETCORE_ENVIRONMENT=Development"
+      - "AppSettings__ShoppingAPI=http://shoppingapi"
+    depends_on:
+      - shopping.db
+      - shopping.api
     ports:
-      - "80"
+      - "8000:80"
 
   shopping.api:
+    container_name: shoppingapi
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
+      - DatabaseSettings__ConnectionString=mongodb://shoppingdb:27017
+    depends_on:
+      - shopping.db
     ports:
-      - "80"
+      - "8001:80"
 
+  shopping.db:
+    container_name: shoppingdb
+    restart: always
+    ports:
+      - "27017:27017"
+    volumes:
+      - /Users/yovento/Developer/WEBAPP_STORAGE_HOME/shopping.db:/data/db
