--- a/Shopping/docker-compose.yml
+++ b/Shopping/docker-compose.yml
@@ -3,14 +3,17 @@ version: '3.4'
 services:
   shopping.client:
     platform: linux/amd64
-    image: ${DOCKER_REGISTRY-}shopping
+    image: ${DOCKER_REGISTRY-}shoppingclient
     build:
       context: .
       dockerfile: Shopping.Client/Dockerfile
 
   shopping.api:
-    image: ${DOCKER_REGISTRY-}shopping
+    platform: linux/amd64
+    image: ${DOCKER_REGISTRY-}shoppingapi
     build:
       context: .
       dockerfile: Shopping.API/Dockerfile
 
+  shopping.db:
+    image: mongo
