- Override configuration for DEV environment using arm64.

--- a/Shopping/docker-compose.override.yml
+++ b/Shopping/docker-compose.override.yml
@@ -2,6 +2,7 @@ version: '3.4'
 
 services:
   shopping.client:
+    platform: linux/arm64
     container_name: shoppingclient
     environment:
       - "ASPNETCORE_ENVIRONMENT=Development"
@@ -13,6 +14,7 @@ services:
       - "8000:80"
 
   shopping.api:
+    platform: linux/arm64
     container_name: shoppingapi
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
